image asset path

--- a/_posts/2019-03-22-my-10-books.md
+++ b/_posts/2019-03-22-my-10-books.md
@@ -13,7 +13,7 @@ There's lots of ways to slice a "10 books" list - what are the last 10 books I r
 
 These are books that have shaped my life and thinking, from early high school days until very recently. The books I return to again and again, and a short note about why.
 
-![]({{ site.url }}{{ site.baseurl }}/assets/images/51Yiy2gmWRL.jpg)
+![]({{ site.url }}{{ site.baseurl }}{{ site.url }}{{ site.baseurl }}/assets/images/51Yiy2gmWRL.jpg)
 
 [Gates of Fire](https://www.thehawaiiproject.com/book/Gates-of-Fire--by--Steven-Pressfield--57492)  
 Gates of Fire tells the story of the 300 Spartan warriors at the battle of Thermopylae. Spoiler alert: they all die. I've lived with this book for 20 years and it's taught me so much about leadership, how to behave under pressure, and being part of a team I love.  
@@ -30,7 +30,7 @@ I [wrote about it here](http://www.viking2917.com/leadership-lessons-from-the-an
   
 Bonus reading: Tides of War by the same author.
 
-![](/assets/images/41kVzCSWCL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/41kVzCSWCL.jpg)
 
 [Wind, Sand and Stars](https://www.thehawaiiproject.com/book/Wind,-Sand-and-Stars--by--Antoine-de-Saint_Exup%C3%A9ry--4098)
 
@@ -38,19 +38,19 @@ A rousing adventure story and a philosophical exploration. A truly unique and in
   
 _"Each man must look to himself to teach him the meaning of life. It is not something 'discovered': it is something moulded."_
 
-![](/assets/images/41F75p2GedL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/41F75p2GedL.jpg)
 
 [Zen & the Art of Motorcycle Maintenance](https://www.thehawaiiproject.com/book/Zen-and-the-Art-of-Motorcycle-Maintenance-An-Inquiry-into-Values--by--Robert-M.-Pirsig--51895)
 
 I first read this book in high school. With its explorations of "What is Quality", tracing the path of western & eastern philosophies, it set me on the lifelong path of the mind.
 
-![](/assets/images/61EcRF4cjJL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/61EcRF4cjJL.jpg)
 
 [Neuromancer](https://www.thehawaiiproject.com/book/Neuromancer--by--William-Gibson--63196)
 
 William Gibson's debut novel of cyberspace, computer cowboy jockeys, deadly beautiful women wearing mirror shades, and a reggae spaceship pilot sparked a love affair with computers for me that has continued to this day.
 
-![](/assets/images/416AgjxYMuL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/416AgjxYMuL.jpg)
 
 [A Perfect Spy](https://www.thehawaiiproject.com/book/A-Perfect-Spy--by--John-le-Carr%C3%A9--30245)
 
@@ -58,7 +58,7 @@ We value what we work for. And man did I work for this. My first three attempts 
   
 What would cause a good man to seemingly betray everything and everyone? A Perfect Spy will take you inside the head and life of Magnus Pym, a spy (and thinly-veiled double for John Le Carré himself), so you will understand.
 
-![](/assets/images/cover-thumbnail-4.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/cover-thumbnail-4.jpg)
 
 [Meditations, by Marcus Aurelius](https://www.thehawaiiproject.com/book/Meditations--by--Marcus-Aurelius--39287)
 
@@ -68,7 +68,7 @@ In the year when my mother died from ALS, and the cacophony of Trump was inescap
   
 I wrote [more about it here](https://medium.com/@thehawaiiproj/the-meditations-of-marcus-aurelius-5652bd1dd535).
 
-![](/assets/images/61DWsY9yvtL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/61DWsY9yvtL.jpg)
 
 [The Lord of the Rings](https://www.thehawaiiproject.com/book/The-Hobbit-The-Lord-of-the-Rings--by--J.-R.-R.-Tolkien--24876)
 
@@ -76,7 +76,7 @@ From my early days playing Dungeons & Dragons in high school, to reading Beowulf
   
 _"To them a reviewer need say little, except that here are beauties which pierce like swords or burn like cold iron; here is a book that will break your heart."_
 
-![](/assets/images/5190TBY5K7L.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/5190TBY5K7L.jpg)
 
 [Burning the Days](https://www.thehawaiiproject.com/book/Burning-the-Days--by--James-Salter--78738)
 
@@ -86,13 +86,13 @@ _“I cannot think of it without sadness. I think of the day-long, intimate hour
   
 Ok. It's two sentences. [My review here](https://medium.com/the-hawaii-project/burning-the-days-by-james-salter-45263456d1ec).
 
-![](/assets/images/51mT9C-r3mL-1.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/51mT9C-r3mL-1.jpg)
 
 [Song of the Exile](https://www.thehawaiiproject.com/book/Song-of-the-Exile-(Ballantine-Readers-Circle)--by--Kiana-Davenport--153316)
 
 Speaking of books that will break you heart. Song of the Exile is an extraordinary, powerful, heartbreaking novel. It follows the lives of Keo, a native Hawaiian who burns to play jazz, and Sunny, a Korean/Hawaiian student, as they fall in love, are separated by the tides of World War II, and try to find each other afterwards. Through a series of events Sunny is taken as a comfort woman by the Japanese.... [My full review.](https://medium.com/the-hawaii-project/song-of-the-exile-by-kiana-davenport-b893b241b7fb)
 
-![](/assets/images/41E4WB8PSFL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/41E4WB8PSFL.jpg)
 
 [The Riddle Master of Hed](https://www.thehawaiiproject.com/book/The-Riddle_Master-of-Hed--by--Patricia-A.-McKillip--233949)
 
@@ -100,7 +100,7 @@ It's hard to explain the allure of this beautiful trilogy by Patricia McKillip. 
   
 When I truly want to escape to another world, I come back to Hed.
 
-![](/assets/images/51VjDaHWfaL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/51VjDaHWfaL.jpg)
 
 [Shogun](https://www.thehawaiiproject.com/book/Shogun-(Asian-Saga-Book-1)--by--James-Clavell--25571)
 
