--- a/_posts/2020-01-10-our-reading-in-2019.md
+++ b/_posts/2020-01-10-our-reading-in-2019.md
@@ -11,7 +11,7 @@ coverImage: "agincourt-1-1.jpg"
 
 Bookship continues to enable a lot of social reading for me. With various friends I read [Henry V](https://www.thehawaiiproject.com/book/Henry-V--by--William-Shakespeare--63482), [Justine](https://www.thehawaiiproject.com/book/Justine-(Alexandria)--by--Lawrence-Durrell--133159) (I love Lawrence Durrell!), **Following the Equator** by Mark Twain, **The Hound of the Baskervilles** and **Tarzan** by Edgar Rice Burroughs (who once lived about a mile from my house!). I also re-read Dan Simmon's **Hyperion** with my family, which was good fun! The book club I am in read some fun stuff as well, including **Unfamiliar Fishes**, a fascinating history of post-contact Hawaii, **Oryx and Crake** by Margaret Atwood, **The Power** by Naomi Alderman, and the rather disappointing **Life After Google** by George Gilder. 
 
-![](/assets/images/agincourt-1.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/agincourt-1.jpg)
 
 Reading [Henry V](https://www.thehawaiiproject.com/book/Henry-V--by--William-Shakespeare--63482) with my friend Thomas was a high point of the year for me. It's the first Shakespeare I can remember reading (I'm sure I read Romeo & Juliet in high school, but I don't remember it). Learning to flow with Shakespeare's language, stopping occasionally for a dictionary check, but usually just going with the flow, was good fun. We used that reading as a jumping-off point to explore Salic Law (kidding, sort of, it's a plot point), the history of the battle of Agincourt, where a heavily outnumbered English force (estimates vary, but commonly reported as 6000 English against roughly 30,000 French), destroyed the French force, the English Longbow being the decisive factor. We also explored the various theatrical renditions of Henry V (Olivier, Branagh, et. al.). I also re-read Bernard Cornwell's wonderful book [Agincourt](https://www.thehawaiiproject.com/book/Agincourt--by--Bernard-Cornwell--5683), a nice fictional complement. Henry V is the source of a number of quotes you may know, yet not know whence they came: 
 
@@ -28,7 +28,7 @@ and my personal favorite, delivered best by Branagh. 
 
 Inspired somewhat by **Traveling the Equator**, Mark Twain's travelogue of the Pacific and Asia, I tackled Max Adams' **In the Land of the Giants**, an historical travelogue of Dark Ages Britain. Very interesting, although extremely dense in history and place names, so I had to read in increments, on-and-off for most of the year. 
 
-![](/assets/images/norwegian.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/norwegian.jpg)
 
 On the more serious side, I read some truly outstanding novels this year. The most memorable of them, Norwegian by Night, is actually not entirely serious. In fact it's the [funniest book I've read](https://www.librarything.com/work/12942547/reviews/169207225) in a long long time.
 
