bad image links

--- a/_posts/2019-03-22-my-10-books.md
+++ b/_posts/2019-03-22-my-10-books.md
@@ -13,7 +13,7 @@ There's lots of ways to slice a "10 books" list - what are the last 10 books I r
 
 These are books that have shaped my life and thinking, from early high school days until very recently. The books I return to again and again, and a short note about why.
 
-![]({{ site.url }}{{ site.baseurl }}{{ site.url }}{{ site.baseurl }}/assets/images/51Yiy2gmWRL.jpg)
+![]({{ site.url }}{{ site.baseurl }}/assets/images/51Yiy2gmWRL.jpg)
 
 [Gates of Fire](https://www.thehawaiiproject.com/book/Gates-of-Fire--by--Steven-Pressfield--57492)  
 Gates of Fire tells the story of the 300 Spartan warriors at the battle of Thermopylae. Spoiler alert: they all die. I've lived with this book for 20 years and it's taught me so much about leadership, how to behave under pressure, and being part of a team I love.  
